# xml_to_json

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  requirements.txt  setup.cfg
xml_to_json/: cli.py  convert_xml_to_json.py
