[metadata]
name = xml_to_json
version = 1.1.0
description = A XML to JSON Converter which will convert one or more XML files into JSON / JSONL files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leo-schick/xml_to_json
license = MIT

[options]
packages = find:
install_requires =
    xmlschema>=1.0.7&<=1.1.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    xml_to_json = xml_to_json.cli:run

[options.packages.find]
exclude =
    .venv*
    docs*